force-app/main/default/objects/Lead/fields/Account_Relacionada__c.field-meta.xml
<CustomField>
    <fullName>Account_Relacionada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Relacionada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Account Relacionada)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>