force-app/main/default/objects/Lead/fields/Divergencia_em_dados_do_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>Divergencia_em_dados_do_CNPJ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Divergência em dados do CNPJ?</label>
    <type>Checkbox</type>
</CustomField>