force-app/main/default/objects/Lead/fields/Ignorar_validacao_de_qualidade__c.field-meta.xml
<CustomField>
    <fullName>Ignorar_validacao_de_qualidade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignorar validação de qualidade</label>
    <type>Checkbox</type>
</CustomField>