force-app/main/default/objects/Lead/fields/Lead_Completo__c.field-meta.xml
<CustomField>
    <fullName>Lead_Completo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Completo?</label>
    <type>Checkbox</type>
</CustomField>