force-app/main/default/objects/Lead/fields/Lead_Qualificado__c.field-meta.xml
<CustomField>
    <fullName>Lead_Qualificado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Qualificado?</label>
    <type>Checkbox</type>
</CustomField>