force-app/main/default/objects/Lead/fields/Motivo_de_Qualidade_do_Lead__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Qualidade_do_Lead__c</fullName>
    <label>Motivo de Qualidade do Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sem telefone</fullName>
            </value>
            <value>
                <fullName>Dados inconsistentes CNPJ</fullName>
            </value>
            <value>
                <fullName>Campos obrigatórios vazios</fullName>
            </value>
            <value>
                <fullName>Override manual</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>