force-app/main/default/objects/Lead/fields/Observacoes_da_Revisao__c.field-meta.xml
<CustomField>
    <fullName>Observacoes_da_Revisao__c</fullName>
    <label>Observações da Revisão</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>