force-app/main/default/objects/Lead/fields/Orcamento__c.field-meta.xml
<CustomField>
    <fullName>Orcamento__c</fullName>
    <label>Orçamento informado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>R$2.000 a R$6.000</fullName>
            </value>
            <value>
                <fullName>R$6.000 a R$12.000</fullName>
            </value>
            <value>
                <fullName>R$12.000 a R$24.000</fullName>
            </value>
            <value>
                <fullName>R$24.000 a R$48.000</fullName>
            </value>
            <value>
                <fullName>R$48.000 a R$96.000</fullName>
            </value>
            <value>
                <fullName>R$96.000 a R$192.000</fullName>
            </value>
            <value>
                <fullName>R$192.000 a R$384.000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>