force-app/main/default/objects/Lead/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <formula>Lead_Score__c / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>