force-app/main/default/objects/Lead/fields/Prioridade_de_implementacao__c.field-meta.xml
<CustomField>
    <fullName>Prioridade_de_implementacao__c</fullName>
    <label>Prioridade de implementação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Média</fullName>
            </value>
            <value>
                <fullName>Baixa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>