force-app/main/default/objects/Lead/fields/Score_Justificativa__c.field-meta.xml
<CustomField>
    <fullName>Score_Justificativa__c</fullName>
    <label>Score Justificativa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>