force-app/main/default/objects/Lead/fields/Segmento_da_empresa__c.field-meta.xml
<CustomField>
    <fullName>Segmento_da_empresa__c</fullName>
    <label>Segmento da empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocacia</fullName>
            </value>
            <value>
                <fullName>Agência de Marketing</fullName>
            </value>
            <value>
                <fullName>Agropecuária</fullName>
            </value>
            <value>
                <fullName>Alimentício</fullName>
            </value>
            <value>
                <fullName>Audiovisual</fullName>
            </value>
            <value>
                <fullName>Construção Civil</fullName>
            </value>
            <value>
                <fullName>Consultoria</fullName>
            </value>
            <value>
                <fullName>Contábil</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>Educacional</fullName>
            </value>
            <value>
                <fullName>Idiomas</fullName>
            </value>
            <value>
                <fullName>Mercado Imobiliário</fullName>
            </value>
            <value>
                <fullName>Restaurante</fullName>
            </value>
            <value>
                <fullName>Saúde</fullName>
            </value>
            <value>
                <fullName>Tecnologia</fullName>
            </value>
            <value>
                <fullName>Telecomunicação</fullName>
            </value>
            <value>
                <fullName>Turismo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>