force-app/main/default/objects/Lead/fields/Status_de_duplicata__c.field-meta.xml
<CustomField>
    <fullName>Status_de_duplicata__c</fullName>
    <label>Status de duplicata</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
                <default>true</default>
                <label>Novo</label>
            </value>
            <value>
                <fullName>Em Análise - Possível Duplicata</fullName>
            </value>
            <value>
                <fullName>Aprovado para Conversão</fullName>
            </value>
            <value>
                <fullName>Duplicata Confirmada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>