force-app/main/default/objects/Lead/fields/Tamanho_da_empresa__c.field-meta.xml
<CustomField>
    <fullName>Tamanho_da_empresa__c</fullName>
    <label>Tamanho da empresa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 a 10 funcionários</fullName>
            </value>
            <value>
                <fullName>11 a 50 funcionários</fullName>
            </value>
            <value>
                <fullName>51 a 250 funcionários</fullName>
            </value>
            <value>
                <fullName>251 a 1000 funcionários</fullName>
            </value>
            <value>
                <fullName>Mais de 1000 funcionários</fullName>
            </value>
            <value>
                <fullName>1-10</fullName>
                <isActive>false</isActive>
                <label>1-10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>