force-app/main/default/objects/Lead/fields/Tem_projeto_iniciado__c.field-meta.xml
<CustomField>
    <fullName>Tem_projeto_iniciado__c</fullName>
    <label>Tem projeto iniciado?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>