force-app/main/default/objects/Lead/listViews/Leads_em_Revisao_Duplicatas.listView-meta.xml
<ListView>
    <fullName>Leads_em_Revisao_Duplicatas</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_de_duplicata__c</field>
        <operation>equals</operation>
        <value>Em Análise - Possível Duplicata</value>
    </filters>
    <label>Leads em Revisão - Duplicatas</label>
</ListView>