force-app/main/default/objects/Lead/listViews/Leads_SMB_Lead.listView-meta.xml
<ListView>
    <fullName>Leads_SMB_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Leads SMB</label>
    <queue>Leads_SMB</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>